# AI-C

./: .gitignore  DESIGN.md  ISSUES.md  README.md  benchmark.py  config.example.toml  pyproject.toml  test_cli.py  test_tui.py
aic/: __main__.py  config.py  errors.py  kairos.py  llm.py  main.py  repl.py  session.py  session_issue.md  tui.py
aic/dream/: __main__.py  agent.py  consolidator.py  issue.md  lock.py  scheduler.py
aic/mcp/: loader.py  registry.py  runner.py
aic/memory/: extractor.py  issue.md  store.py  types.py
aic/providers/: __init__.py  base.py  claude.py  openai_compat.py
aic/search/: brave.py  ddg.py  tool.py
tests/: test_config.py  test_dream.py  test_dream_lock.py  test_dream_main.py  test_extractor.py  test_kairos.py  test_llm.py  test_main.py  test_mcp_loader.py  test_mcp_registry.py  test_mcp_runner.py  test_memory_store.py  test_providers.py  test_repl.py  test_session.py  test_smoke.py  test_tui_render.py
