[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aic"
version = "0.1.0"
description = "AI Coding Assistant — CLI, no Electron, no proxy hell"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
aic = "aic.main:main"

[tool.hatch.build.targets.wheel]
packages = ["aic"]
